# Cozo-Relay

./: Cargo.toml  README.md
crates/e2e/: Cargo.toml
crates/e2e/e2e-logs/: e2e-summary.json
crates/e2e/src/: main.rs
crates/graph-cozo/: Cargo.toml
crates/graph-cozo/migrations/: 0001_init.cozo  0002_indexes.cozo  0003_dedup.cozo  0004_hot_latest.cozo  0005_verify_derivations.cozo  0006_latest_by_kind.cozo  0007_latest_by_author.cozo  0008_worldview.cozo
crates/graph-cozo/src/: graphrank.rs  lib.rs  metrics.rs  pagination.rs  queries.rs  schema.rs  tuning.rs  write_batch.rs
crates/http-server/: Cargo.toml
crates/http-server/src/: lib.rs
crates/nostr-model/: Cargo.toml
crates/nostr-model/src/: lib.rs
crates/relay-bin/: Cargo.toml
crates/relay-bin/src/: main.rs
crates/repo/: Cargo.toml
crates/repo/src/: lib.rs
crates/settings/: Cargo.toml  README.md
crates/settings/src/: lib.rs
crates/ws-server/: Cargo.toml
crates/ws-server/src/: lib.rs
data/cozo/: cozo.db
data/cozo/snapshots/: snapshot-1762120037.jsonl  snapshot-1762129188.jsonl  snapshot-1762476434.jsonl
e2e-logs/: e2e-summary.json
