[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
nostr-model = { path = "../nostr-model" }
anyhow = "1"

[[bin]]
name = "e2e"
path = "src/main.rs"
