[package]
name = "ws-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
nostr-model = { path = "../nostr-model" }
cozo-repo = { path = "../repo" }
relay-settings = { path = "../settings" }
tokio-tungstenite = "0.21"
tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
